# xmulberry

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  xmulberry.pro
include/: MimeApp.hpp  Mulberry.hpp  Setting.hpp  Utils.hpp
src/: MimeApp.cpp  Mulberry.cpp  Setting.cpp  Utils.cpp  main.cpp
ui/: Mulberry.ui
